--- a/package.json
+++ b/package.json
@@ -19,5 +19,13 @@
   "bugs": {
     "url": "https://github.com/ireneBird/IntoIter/issues"
   },
-  "homepage": "https://github.com/ireneBird/IntoIter#readme"
+  "homepage": "https://github.com/ireneBird/IntoIter#readme",
+  "devDependencies": {
+    "@types/jest": "^29.2.3",
+    "jest": "^29.3.1",
+    "ts-jest": "^29.0.3"
+  },
+  "dependencies": {
+    "typescript": "^4.8.4"
+  }
 }
